--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,12 @@
 body
 {
-  background-color: black;
+  font-family: 'Inter';
+  font-weight: 300;
+  background-color: rgb(135, 135, 135);
 }
-.container
+.containers
 {
-  margin-top: 3em;
+  margin-top: 0.2em;
   padding: 2em;
   border-radius: 10px;
   background-color: white;
