--- a/frontend/src/components/Table.css
+++ b/frontend/src/components/Table.css
@@ -1,36 +1,145 @@
 .tables
 {
-    background-color: rgb(221, 221, 221);
-    font-weight: 300;
+    margin-top: 0;
+    /* background-color: #dcdcdc; */
+    font-weight: 400;
+    border-radius: 10px;
+    font-family: 'Inter';
+    margin-bottom: 4em;
+    overflow-y: scroll;
+    height: 90vh;
+}
+
+#clg-logo
+{
+    width: 20em;
     
+    
+}
+@media(min-width:992px) {
+    .stblock
+    {
+        text-align: center;
+    }
+}
+.statsblock h3
+{
+    
+    font-size: 1em;
+}
+.statsblock h1
+{
+    font-family: 'Poppins';
+    font-weight: 700;
+}
+#tno
+{
+    color: grey;
+}
+#pno
+{
+    color: red;
+}
+#sno
+{
+    color: green;
+}
+.statsblock
+{
+    
+}
+.individual-option
+{
+    display: inline-flex;
+  margin-right: 5em;
+}
+.main-table
+{
+    width: 100%;
 }
 .tables th
 {
-    background-color: rebeccapurple;
+    background-color: rgb(30, 10, 51);
     color: rgb(249, 249, 249);
 }
-.sortmenu
+.frb
 {
-    display: inline-flex;
+    width: 120%;
+}
+td
+{
+    font-weight: 400;
+    color: rgb(75, 75, 75);
+    height: 2em;
    
+}
+.main-table
+{
+    background-color: white;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px     rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px     rgba(0,0,0,0.5); 
 }
 .option
 {
-    display: inline-flex;
+   display: inline-flex;
+   position: sticky;
+   background-color:rgb(247, 247, 247);
+   width: 100%;
+}
+.tab-opt
+{
+    
+    margin-top: 2em;
+    margin-bottom: 0;
+    border-radius: 10px;
+    background-color:rgb(247, 247, 247);
 }
 .optioname
 {
-    margin-top: 1em;
+    margin-top: 1.2em;
     font-size: 1em;
 }
 .optsel
 {
     border-radius: 5px;
     height: 2.3em;
-    
-    margin-top: 1em;
+    border: transparent;
+    margin-top: 0.7em;
 }
 .searchbar
 {
+    width: 12em;
     margin-top: 1em;
+    margin-bottom: 1em;
+ 
+}
+.searchbutton
+{
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+.sec-opt-bar
+{
+    background-color:rgb(247, 247, 247);
+    display: inline-flex;
+}
+.sno
+{
+    display: inline-flex;
+}
+.option-row
+{
+    width: 100%;
 }
